Add bouton graph + graph html

--- a/templates/personal_record.html
+++ b/templates/personal_record.html
@@ -11,5 +11,10 @@
     <option value="">-- Sélectionner un PR --</option>
   </select>
   <script src="{{ url_for('static', filename='script.js') }}"></script>
+  <h2>Choisis l'activité/h2>
+  <select id="prSelectActivite">
+    <option value="">-- Sélectionner une activité --</option>
+  </select>
+  <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
