--- a/templates/personal_record.html
+++ b/templates/personal_record.html
@@ -11,8 +11,8 @@
     <option value="">-- Sélectionner un PR --</option>
   </select>
   <script src="{{ url_for('static', filename='script.js') }}"></script>
-  <h2>Choisis l'activité/h2>
-  <select id="prSelectActivite">
+  <h2>Choisis l'activité</h2>
+  <select id="prSelectActivity">
     <option value="">-- Sélectionner une activité --</option>
   </select>
   <script src="{{ url_for('static', filename='script.js') }}"></script>
