--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,12 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <title>Accueil</title>
+  <title>Index</title>
   <link rel="stylesheet" href="/static/style.css" />
 </head>
 <body>
-  <h1>Bienvenue sur mon app</h1>
-  <a href="/login-page">Se connecter</a>
+  <h1>Workouts tracker</h1><br>
+  <a href="/login-page">Login</a><br>
+  <a href="/register-page">Register</a>
 </body>
 </html>
