--- a/templates/register.html
+++ b/templates/register.html
@@ -2,12 +2,13 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <title>Login</title>
+  <title>Register</title>
   <link rel="stylesheet" href="/static/style.css" />
 </head>
 <body>
-  <h1>Login</h1><br>
-  <form id="loginForm">
+  <h1>Register</h1><br>
+  <form id="registerForm">
+    <input type="name" id="name" placeholder="Name" required />
     <input type="email" id="email" placeholder="Email" required />
     <input type="password" id="password" placeholder="Password" required />
     <button type="submit">Submit</button>
