Ajout de boutons

--- a/templates/personal_index.html
+++ b/templates/personal_index.html
@@ -14,6 +14,8 @@
   <select id="prSelectActivity">
     <option value="">-- Select workout --</option>
   </select>
+  <h2>PR</h2>
+  <button type="button" id="addPR">Add PR</button>
   <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
