--- a/templates/personal_record_add.html
+++ b/templates/personal_record_add.html
@@ -18,6 +18,7 @@
     <button type="submit">Submit</button>
   </form>
   <div id="message"></div>
+  <button type="button" id="returnPRIndex">Return to index</button>
   <script src="/static/script.js"></script>
 </body>
 </html>
